Add TopologyThreadTest
To accomodate this change, several small changes were made to the model,
including the introduction of Network.getProtocols() and
Network.getSeeds().